[package]
name = "libnm_rs_hackin"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow = "1.0"

# Network Manager
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
nm = { git = "https://github.com/balena-io-modules/libnm-rs.git" }

# Arg parsing
clap = { version = "3", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }