[package]
name = "nutil"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow = "1.0"

# Network Manager
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
nm = { git = "https://github.com/balena-io-modules/libnm-rs.git" }

# Arg and config parsing
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }